listing subjects by professor